# LexFlow

./: .gitignore  ANDROID_BUILD.md  CHANGELOG.md  README.md  build-android.sh  install-macos.sh  nohup.out  package-lock.json  package.json
.github/workflows/: build-windows.yml  release-all.yml
assets/: README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/e2e/: playwright.config.ts
client/e2e/tests/: activation.spec.ts
client/src/: App.jsx  ErrorBoundary.jsx  api.js  index.css  main.jsx  tauri-api.js
client/src/components/: CreatePracticeModal.jsx  ExportWarningModal.jsx  LicenseActivation.jsx  LicenseScreen.jsx  LicenseSettings.jsx  LoginScreen.jsx  PracticeDetail.jsx  Sidebar.jsx  WindowControls.jsx
client/src/pages/: AgendaPage.jsx  BillingPage.jsx  ConflictCheckPage.jsx  ContactsPage.jsx  Dashboard.jsx  DeadlinesPage.jsx  PracticesList.jsx  SettingsPage.jsx  TimeTrackingPage.jsx
client/src/styles/: license.css
client/src/utils/: pdfGenerator.js
electron/: biometrics.js  main.js  preload.js  storage.js
electron/services/: keychain.js
scripts/: README.md  gen_keys.py  generate_license.py  generate_license_v2.py  license-keygen.js  test-notifications.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
