[package]
name = "lexflow"
version = "2.3.5"
description = "LexFlow — Gestionale Studio Legale con Crittografia Zero-Knowledge"
authors = ["TechnoJaw"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
# rlib = desktop; cdylib aggiunto per Android (JNI bridge richiesto da Tauri mobile)
crate-type = ["rlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core & Serialization
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Plugins
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

# Utilities
dirs = "5"
whoami = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
tokio = { version = "1", features = ["sync"] }

# Security (MIL-GRADE) — tutte le piattaforme
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive", "alloc"] }

# image — solo desktop (non necessario su Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Android: keystore sicuro nativo via android_keystore
[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "3", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"

# Android release: strip aggressivo per APK compatti
[profile.release.package."*"]
opt-level = "s"
