[package]
name = "lexflow"
version = "3.0.0"
description = "LexFlow — Gestionale Studio Legale con Crittografia Zero-Knowledge"
authors = ["Pietro Longo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core & Serialization
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Plugins
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

# Utilities
dirs = "5"
whoami = "1"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["sync", "time"] }

# Security (MIL-GRADE) — tutte le piattaforme
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive", "alloc"] }

ed25519-dalek = "2.0"

# Desktop-only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
open = "5"
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# macOS-only: App Nap prevention via NSProcessInfo FFI
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.1"

# time crate: needed by tauri-plugin-notification Schedule::At (OffsetDateTime)
[dependencies.time]
version = "0.3"
features = ["local-offset"]

# Android: keystore sicuro nativo via android_keystore
[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "3", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

# Android-only: profilo separato per APK compatti
# Su desktop questo blocco non viene usato (target != android)
# NON usare [profile.release.package."*"] globale — override anche le dipendenze crypto
[profile.release-android]
inherits = "release"
lto = "thin"
opt-level = "s"
strip = true
codegen-units = 4
